# WanderSmart

./: .env copy  .gitignore  ProjectPlan.md  README.md  app org.py  app.py  pyproject.toml
.streamlit/: config.toml
images/: paris.xcf  rome.xcf
scripts/: run_streamlit.sh
src/wandersmart/: 01_Homepage.py  app.py  crew.py  main.py  models.py  streamlit_utils.py
src/wandersmart/config/: agents.yaml  tasks.yaml
src/wandersmart/pages/: 01_Destination_Explorer.py  02_Trip_Planner.py  03_Chat_with_AI.py  04_Feedback.py  05_Logging_Control.py
src/wandersmart/scripts/: run_streamlit.sh
src/wandersmart/utils/: constants.py  validation.py
wandersmart/src/wandersmart/: crew.py  main.py
